basic search and recent search working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-restaurant-list></app-restaurant-list>
+<app-restaurant-list [listRestaurantArray]= "restaurants"></app-restaurant-list>
 <router-outlet></router-outlet>
