--- a/src/app/restaurant-card/restaurant-card.component.scss
+++ b/src/app/restaurant-card/restaurant-card.component.scss
@@ -1,11 +1,12 @@
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     width: 30em;
     border-radius: 5px;
     display: flex;
-    margin: 2em 0em;
-    width: 90%;
+    margin: 2em 1em;
+    /* width: 50%; */
+    min-width: 300px;
     max-width: 500px;
   }
   
