--- a/src/app/restaurant-card/restaurant-card.component.scss
+++ b/src/app/restaurant-card/restaurant-card.component.scss
@@ -5,7 +5,7 @@
     border-radius: 5px;
     display: flex;
     margin: 2em 1em;
-    /* width: 50%; */
+    color: grey;
     min-width: 300px;
     max-width: 500px;
   }
@@ -22,4 +22,15 @@
   
   .container {
     padding: 2px 16px;
+    width: 70%;
+  }
+
+  .deliveryTimeStyle {
+    float: right;
+    margin-top: 2em;
+  }
+
+  .ratingStyle {
+    float: left;
+    margin-top: 2em;
   }
