--- a/src/app/restaurant-list/restaurant-list.component.scss
+++ b/src/app/restaurant-list/restaurant-list.component.scss
@@ -5,6 +5,30 @@
     box-shadow: 0 0 4px 0 grey;
   }
 
+  .sortFields {
+    display: inline-flex;
+    margin-left: 3em;
+  }
+  .sortFields .sortTitle {
+    padding: 0.5em;
+    margin: 1em 0px;
+    font-size: 20px;
+    /* font-size: 1em; */
+    color: royalblue;
+  }
+  .sortFields .sortBy {
+    padding: 0.5em;
+    margin: 1em 1px;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    background: lightblue;
+}
+
+.selectedField {
+  background: steelblue;
+}
+
   .recentSearch {
     padding: 1em 3em;
     color: grey;
