--- a/src/app/restaurant-list/restaurant-list.component.html
+++ b/src/app/restaurant-list/restaurant-list.component.html
@@ -1,7 +1,7 @@
 <div class="searchBox">
   <div class="searchInput">
     <input #searchInputTag type="text" (focus)="togglePastSearch(true)"
-    placeholder="Search for Restaurants or Dishes" (keyup.enter)="triggerSearch($event.target.value)">
+    placeholder="Search for Restaurants Or Dishes" (keyup.enter)="triggerSearch($event.target.value)">
   </div>
   <div #pastSearches class="recentSearch">
     Recent Searches
